--- a/css/style.css
+++ b/css/style.css
@@ -2120,6 +2120,7 @@ button.swiper-pagination-bullet {
 
 .list-video .list-video-item .list-video-info .list-video-title {
   font-size: 14px;
+  color: #404040;
 }
 
 .list-video .list-video-item .list-video-info .list-video-introduce {
