--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,10 @@ footer.navbar ~ .main {
   margin-bottom: 50px;
 }
 
+footer.navbar.fix-android ~ .main {
+  margin-bottom: 0;
+}
+
 .spacing {
   height: 15px;
 }
@@ -2197,7 +2201,7 @@ button.swiper-pagination-bullet {
 }
 
 .video-info .item {
-  width: 25%;
+  width: 33.3%;
   text-align: center;
   font-size: 12px;
   border-right: 1px solid #e5e5e5;
@@ -2210,6 +2214,20 @@ button.swiper-pagination-bullet {
 
 .video-info .item:last-child {
   border-right: 0;
+}
+
+.video-introduce {
+  padding: 15px;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.video-introduce .title {
+  margin-bottom: 15px;
+}
+
+.video-introduce p {
+  font-size: 14px;
+  color: #979797;
 }
 
 .video-anthology {
@@ -2256,7 +2274,7 @@ button.swiper-pagination-bullet {
 .login-form {
   position: absolute;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -2276,6 +2294,14 @@ button.swiper-pagination-bullet {
   width: 220px;
   margin-top: 30px;
   margin-bottom: 30px;
+}
+
+.android .login-form {
+  position: relative;
+}
+
+.android .login-form .logo {
+  margin-top: 80px;
 }
 
 .form-box {
